Create the basic GRPC server for the user service

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -1,18 +1,15 @@
-FROM node:12.13-alpine as development
+FROM node:12.13-alpine As development
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install --only=development
+RUN npm install
 
 COPY . .
 
 RUN npm run build
 
-CMD []
-
-# Production
 FROM node:12.13-alpine as production
 
 ARG NODE_ENV=production
