--- a/users-service/package.json
+++ b/users-service/package.json
@@ -21,10 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.4",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/microservices": "^7.1.3",
+    "@nestjs/mongoose": "^7.0.1",
     "@nestjs/platform-express": "^7.0.0",
+    "bcryptjs": "^2.4.3",
+    "grpc": "^1.24.3",
+    "mongoose": "^5.9.18",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
@@ -33,8 +39,10 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "^5.7.22",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
@@ -48,6 +56,7 @@
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
+    "ts-proto": "^1.23.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
   },
