--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -25,14 +25,17 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/graphql": "^7.4.1",
     "@nestjs/microservices": "^7.1.3",
     "@nestjs/platform-express": "^7.0.0",
+    "apollo-server-express": "^2.14.2",
     "dotenv": "^8.2.0",
+    "graphql": "^15.1.0",
+    "graphql-tools": "^6.0.8",
     "grpc": "^1.24.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "ts-protoc-gen": "^0.12.1-pre.3266132"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
