--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -29,6 +29,7 @@
     "@nestjs/microservices": "^7.1.3",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.14.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql": "^15.1.0",
     "graphql-tools": "^6.0.8",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
