feat: Added JWT auth strategy to the api

--- a/.env
+++ b/.env
@@ -5,7 +5,11 @@ MONGO_PASSWORD=admin
 MONGO_DATABASE=db
 MONGO_PORT=27017
 
+# POSTGRES
 POSTGRES_PORT=5433
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=admin
 POSTGRES_DATABASE=db
+
+#API
+API_PORT=3333
