--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -26,14 +26,19 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.4.1",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/microservices": "^7.1.3",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.14.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "graphql": "^15.1.0",
     "graphql-tools": "^6.0.8",
     "grpc": "^1.24.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
