--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/react-testing": "^3.1.4",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "formik": "^2.1.4",
     "framer-motion": "^1.11.0",
+    "graphql": "^15.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "yarn watch:css && react-scripts start",
@@ -23,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,8 +50,14 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.15.1",
+    "@graphql-codegen/typescript": "1.15.1",
+    "@graphql-codegen/typescript-operations": "^1.15.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.15.1",
     "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.2",
     "autoprefixer": "^9.8.0",
+    "mutationobserver-shim": "^0.3.7",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
   }
