--- a/kanban-board/codegen.example.yml
+++ b/kanban-board/codegen.example.yml
@@ -5,6 +5,7 @@ generates:
   src/graphql/generated.ts:
     plugins:
       - "typescript"
+      - "typescript-operations"
       - "typescript-react-apollo"
     config:
       withHOC: false
