--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.3",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
   },
