--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.3",
+    "react-toastify": "^6.0.5",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
   },
