feat: Created the Navbar, ProjectModal and Select components

--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-spinners": "^0.8.3",
     "react-toastify": "^6.0.5",
     "typescript": "~3.7.2",
@@ -57,6 +58,7 @@
     "@graphql-codegen/typescript-operations": "^1.15.1",
     "@graphql-codegen/typescript-react-apollo": "^1.15.1",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.13",
     "@types/yup": "^0.29.2",
     "autoprefixer": "^9.8.0",
     "mutationobserver-shim": "^0.3.7",
